--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "back-end-recados",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "npx tsc",
-    "start": "node -r dotenv/config ./dist/index.js",
+    "start": "node -r dotenv/config ./dist/server.js",
     "migration:show": "ts-node --transpile-only node_modules/typeorm/cli.js migration:show",
     "migration": "ts-node-dev --transpile-only node_modules/typeorm/cli.js migration:run",
     "migration:revert": "ts-node-dev --transpile-only node_modules/typeorm/cli.js migration:revert"
