--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc",
+    "postbuild": "migration:prod",
     "start": "node ./dist/server.js",
     "migration:show": "ts-node --transpile-only node_modules/typeorm/cli.js migration:show",
     "migration": "ts-node-dev --transpile-only node_modules/typeorm/cli.js migration:run",
+    "migration:prod": "cross-env NODE_ENV=production npx typeorm migration:run",
     "migration:revert": "ts-node-dev --transpile-only node_modules/typeorm/cli.js migration:revert"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.12",
     "@types/node": "^15.12.4",
     "@types/uuid": "^8.3.0",
@@ -19,6 +22,9 @@
     "typescript": "^4.3.4"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "pg": "^8.6.0",
