--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "back-end-recados",
   "version": "1.0.0",
   "main": "server.js",
+  "engines": {
+    "node": "10.19.0"
+  },
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
