--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "dev:debug": "ts-node-dev --inspect=0.0.0.0:9229 --respawn --transpile-only src/server.ts",
-    "build": "tsc",
+    "build": "npx tsc",
+    "start": "node dist/server.js",
     "test:setup": "yarn rimraf testdb.sql && yarn migration:run:test",
     "test": "yarn test:setup && cross-env NODE_ENV=test yarn jest --passWithNoTests --silent --noStackTrace --runInBand",
     "test:verbose": "yarn test:setup && cross-env NODE_ENV=test yarn jest --passWithNoTests --runInBand --detectOpenHandles",
